# spinnloop

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
config/: architecture.yaml  intmac.yaml  problem.yaml  variables.yaml
config/architecture/: quantized_outputs.yaml  with_reg.yaml
config/gemm/: bmm1.yaml  bmm2.yaml  mlp_linear_1.yaml  mlp_linear_2.yaml
config/tilings/: bmm1.yaml  bmm2.yaml  mlp_linear_2.yaml
inputs/: arch.yaml  component_intmac.yaml  component_sram.yaml  layer_FF1.yaml  map.yaml  prob.yaml  system_spinnaker2.yaml
layer_shapes/opt/: 029.yaml  033.yaml  087.yaml  208.yaml  317.yaml
opt/: graph.py  layers.py
scripts/: latency.py  layers.py  run.py  stats.py  tensors.py  workload.py
spinnaker2/: arch.yaml  components.yaml  mapper.yaml  problem.yaml
src/spinnloop/: __main__.py  cli.py  model.py  tilings.py  trace.py
trash/: architecture.yaml  architecture10.yaml  architecture11.yaml  architecture12.yaml  architecture5.yaml  architecture6.yaml  architecture9.yaml  mapper.yaml  plot.py  problem_base.yaml  variables.yaml
trash/arch/: 128.yaml  8.yaml  96.yaml
trash/temp/: bmm1.yaml  bmm2.yaml  qkv_with_linear.yaml
tutorial/: architecture11.yaml  architecture12.yaml  architecture2.yaml  architecture3.yaml  architecture4.yaml  architecture7.yaml  architecture8.yaml  mapper.yaml  mapping.yaml  mapping2.yaml  problem.yaml  problem_ff1.yaml  run.py  variables.yaml
tutorial/arch/: 96.yaml
tutorial/tilings/: bmm1.yaml  bmm2.yaml  mlp_linear_1.yaml  mlp_linear_2.yaml  (+1 more)
(+22 files in other folders)
