[project]
name = "spinnloop"
version = "0.1.0"
description = "Command-line tool for spinnloop"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
spinnloop = "spinnloop.cli:app"